kafka-kubernetes/resources/demo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  rules:
    - http:
        paths:
          - path: /reg
            pathType: Prefix
            backend:
              service:
                name: register-service-service
                port:
                  number: 9001
    - http:
        paths:
          - path: /disp
            pathType: Prefix
            backend:
              service:
                name: dispatch-service-service
                port:
                  number: 9002
    - http:
        paths:
          - path: /email
            pathType: Prefix
            backend:
              service:
                name: email-service-service
                port:
                  number: 9003
